--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
             background-color: #e3e3e3;
             padding: 10px;
             border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
         }
     </style>
 </head>
@@ -36,8 +37,14 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+
+    <!-- En Yüksek Skor Kutusu -->
+    <div class="best-score">
+        <p>En Yüksek Skor: {{ high_score }}</p>
+    </div>
+
     <footer>
-        <p>Geliştirici: [Adınızı Girin]</p>
+        <p>Geliştirici: Tolgahan Toros</p>
     </footer>
 </body>
 </html>
